--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         <section class="grid-con hero">
             <h2 class="hidden">Hero Image</h2>
-            <div class="col-span-4 m-col-span-12 l-col-span-12 box">
-                <img src="./img/hero-img.webp" alt="Hero image">
+            <div class="col-span-4 m-col-span-12 l-col-span-12 ">
+                <img src="./img/hero-img.jpeg" alt="Hero image">
             </div>
         </section>
         <section class="grid-con">
@@ -42,20 +42,20 @@
         </section>
         <section class="grid-con services">
             <h2 class="hidden">Service Desc</h2>
-            <div class="col-span-2 m-col-span-4 l-col-span-4 box">
+            <div class="col-span-2 m-col-span-4 l-col-span-4 ">
                 <img src="./img/WhatsApp Image 2023-06-15 at 11.16.49.jpg" alt="">
             </div>
-            <div class="col-span-2 m-col-span-4 l-col-span-4 box">
+            <div class="col-span-2 m-col-span-4 l-col-span-4 ">
                 <img src="./img/Heineken.jpg" alt="">
             </div>
-            <div class="col-span-2 m-col-span-4 l-col-span-4 box">
+            <div class="col-span-2 m-col-span-4 l-col-span-4 ">
                 <img src="./img/vegan.jpg" alt="">
             </div>
-            <div class="col-span-2 m-col-span-6 l-col-span-6 box">
-                <img src="./img/img 6.jpg" alt="">
+            <div class="col-span-2 m-col-span-6 l-col-span-6 ">
+                <img src="./img/monster.jpg" alt="">
             </div>
-            <div class="col-span-2 m-col-span-6 l-col-span-6 box">
-                <img src="./img/img5.jpg" alt="">
+            <div class="col-span-2 m-col-span-6 l-col-span-6 ">
+                <img src="./img/pepsi.jpg" alt="">
             </div>
         </section>
         <section class="grid-con">
@@ -69,7 +69,7 @@
                     drink, made for everyone. Our passion for excellence has driven us from the beginning and continues
                     to propel us going forward. We know that every item counts, and strive to make your entire drinking
                     experience as rewarding as possible. Don't settle for anything but the best—check us
-                    out for yourself</p>
+                    out for yourself</p>
             </div>
         </section>
         <section class="grid-con">
@@ -81,9 +81,9 @@
         <section class="grid-con services">
             <h2 class="hidden">Product info</h2>
             <div class="col-span-2 m-col-span-5 l-col-span-5 box">
-                <img src="./img/monster.jpg" alt="">
+                <img src="./img/img 6.jpg" alt="">
             </div>
-            <div class="col-span-2 m-col-span-7 l-col-span-7 box">
+            <div class="col-span-2 m-col-span-7 l-col-span-7 box info">
                 <p>"Quench your thirst and indulge in a delightful experience with our range of carbonated drinks. At
                     Orbitz, we bring the fizzy goodness of Coke right to your doorstep. Enjoy the convenience
                     of home delivery, where every sip is a refreshing escape from the ordinary. But that's not all! Pair
@@ -94,7 +94,7 @@
                     special."</p>
                     <button class="custom-button">Explore more</button>
             </div>
-            <div class="col-span-2 m-col-span-7 l-col-span-7 box">
+            <div class="col-span-2 m-col-span-7 l-col-span-7 box infp">
                 <p>"Welcome to our carbonated drink delivery service! Indulge in the refreshing fizz of your favorite
                     carbonated beverages, featuring the iconic taste of Coke. We bring the delightful world of bubbly
                     drinks straight to your doorstep. Satisfy your cravings by pairing your Coke with our exclusive
@@ -106,7 +106,7 @@
 
             </div>
             <div class="col-span-2 m-col-span-5 l-col-span-5 box">
-                <img src="./img/pepsi.jpg" alt="">
+                <img src="./img/img5.jpg" alt="">
             </div>
         </section>
         <footer class="grid-con">
