--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h1 class="hidden">Midterm Scaffold</h1>
     <section class="spacer">
         <header class="grid-con">
-            <div class="col-span-3 m-col-span-2 l-col-span-12 ">
+            <div class="l-col-span-12 ">
                 <h2> ORBITZ </h2>
-                <nav>
+                <nav class="navbar">
                     <ul>
                         <li><a href="#">Our Company</a></li>
                         <li><a href="#">Brand</a></li>
@@ -26,6 +26,9 @@
                     </ul>
                 </nav>
             </div>
+            <a href="#" class="mobile col-start-4 phone"><img src="./img/menu.png" alt="hamburger-menu"></a>
+            <a href="#" class="tablet m-col-start-11 ipad"><img src="./img/menu.png" alt="hamburger-menu"></a>
+         
         </header>
 
         <section class="grid-con hero">
@@ -48,7 +51,7 @@
             <div class="col-span-2 m-col-span-4 l-col-span-4 ">
                 <img src="./img/Heineken.jpg" alt="">
             </div>
-            <div class="col-span-2 m-col-span-4 l-col-span-4 ">
+            <div class="col-span-2 m-col-span-4 l-col-span-4 mobile-img">
                 <img src="./img/vegan.jpg" alt="">
             </div>
             <div class="col-span-2 m-col-span-6 l-col-span-6 ">
@@ -83,7 +86,7 @@
             <div class="col-span-2 m-col-span-5 l-col-span-5 box">
                 <img src="./img/img 6.jpg" alt="">
             </div>
-            <div class="col-span-2 m-col-span-7 l-col-span-7 box info">
+            <div class="col-span-2 m-col-span-7 l-col-span-7 box">
                 <p>"Quench your thirst and indulge in a delightful experience with our range of carbonated drinks. At
                     Orbitz, we bring the fizzy goodness of Coke right to your doorstep. Enjoy the convenience
                     of home delivery, where every sip is a refreshing escape from the ordinary. But that's not all! Pair
@@ -94,7 +97,7 @@
                     special."</p>
                     <button class="custom-button">Explore more</button>
             </div>
-            <div class="col-span-2 m-col-span-7 l-col-span-7 box infp">
+            <div class="col-span-2 m-col-span-7 l-col-span-7 box">
                 <p>"Welcome to our carbonated drink delivery service! Indulge in the refreshing fizz of your favorite
                     carbonated beverages, featuring the iconic taste of Coke. We bring the delightful world of bubbly
                     drinks straight to your doorstep. Satisfy your cravings by pairing your Coke with our exclusive
