--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/grid.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@300&family=Ubuntu:wght@300&display=swap">
     <title>MIDTERM SCAFFOLD</title>
 </head>
 
@@ -40,7 +41,7 @@
         <section class="grid-con">
             <h2 class="hidden">Product Section</h2>
             <div class="col-start-2 col-end-4 m-col-start-4 m-col-end-10 l-col-start-4 l-col-end-10 box">
-                <p>Our Products </p>
+                <p class="bold">Our Products </p>
             </div>
         </section>
         <section class="grid-con services">
@@ -64,7 +65,7 @@
         <section class="grid-con">
             <h2 class="hidden">Video </h2>
             <div class="col-span-4  m-col-start-3 m-col-end-11 l-col-start-3 l-col-end-11 box">
-                <p>GET TO KNOW US</p>
+                <p class="bold">GET TO KNOW US</p>
                 <p>
                     The home of your favorite drinks
 
@@ -78,15 +79,15 @@
         <section class="grid-con">
             <h2 class="hidden">Product </h2>
             <div class="col-span-4 m-col-span-12 l-col-span-12 box">
-                <p>Our Services</p>
+                <p class="bold">Our Services</p>
             </div>
         </section>
         <section class="grid-con services">
             <h2 class="hidden">Product info</h2>
-            <div class="col-span-2 m-col-span-5 l-col-span-5 box">
+            <div class="col-span-4 m-col-span-5 l-col-span-5 ">
                 <img src="./img/img 6.jpg" alt="">
             </div>
-            <div class="col-span-2 m-col-span-7 l-col-span-7 box">
+            <div class="col-span-4 m-col-span-7 l-col-span-7 box">
                 <p>"Quench your thirst and indulge in a delightful experience with our range of carbonated drinks. At
                     Orbitz, we bring the fizzy goodness of Coke right to your doorstep. Enjoy the convenience
                     of home delivery, where every sip is a refreshing escape from the ordinary. But that's not all! Pair
@@ -97,7 +98,7 @@
                     special."</p>
                     <button class="custom-button">Explore more</button>
             </div>
-            <div class="col-span-2 m-col-span-7 l-col-span-7 box">
+            <div class="col-span-4 m-col-span-7 l-col-span-7 box">
                 <p>"Welcome to our carbonated drink delivery service! Indulge in the refreshing fizz of your favorite
                     carbonated beverages, featuring the iconic taste of Coke. We bring the delightful world of bubbly
                     drinks straight to your doorstep. Satisfy your cravings by pairing your Coke with our exclusive
@@ -108,13 +109,13 @@
                     <button class="custom-button">Explore more</button>
 
             </div>
-            <div class="col-span-2 m-col-span-5 l-col-span-5 box">
+            <div class="col-span-4 m-col-span-5 l-col-span-5 ">
                 <img src="./img/img5.jpg" alt="">
             </div>
         </section>
         <footer class="grid-con">
             <h2 class="hidden">Footer</h2>
-                 <div class="col-span-3 m-col-span-2 l-col-span-12 ">
+                 <div class="col-span-3 m-col-span-12 l-col-span-12 ">
                 <h2> ORBITZ </h2>
               
                 <p>©2023 by Orbitz. Proudly created with Orbitz.com</p>
