--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./css/grid.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@300&family=Ubuntu:wght@300&display=swap">
-    <title>MIDTERM SCAFFOLD</title>
+    <title>MIDTERM</title>
 </head>
 
 <body>
-    <h1 class="hidden">Midterm Scaffold</h1>
+    <h1 class="hidden">Midterm</h1>
     <section class="spacer">
         <header class="grid-con">
             <div class="l-col-span-12 ">
@@ -40,27 +40,53 @@
         </section>
         <section class="grid-con">
             <h2 class="hidden">Product Section</h2>
-            <div class="col-start-2 col-end-4 m-col-start-4 m-col-end-10 l-col-start-4 l-col-end-10 box">
+            <div class="col-span-4 m-col-start-4 m-col-end-10 l-col-start-4 l-col-end-10 box">
                 <p class="bold">Our Products </p>
             </div>
         </section>
-        <section class="grid-con services">
-            <h2 class="hidden">Service Desc</h2>
-            <div class="col-span-2 m-col-span-4 l-col-span-4 ">
-                <img src="./img/WhatsApp Image 2023-06-15 at 11.16.49.jpg" alt="">
+       <section class="grid-con services">
+    <h2 class="hidden">Service Desc</h2>
+    <div class="col-span-2 m-col-span-4 l-col-span-4">
+        <div class="service-item">
+            <img src="./img/product-img-01.jpg" alt="">
+            <div class="overlay">
+                <button class="custom-button">View Details</button>
             </div>
+        </div>
+    </div>
             <div class="col-span-2 m-col-span-4 l-col-span-4 ">
-                <img src="./img/Heineken.jpg" alt="">
+                <div class="service-item">
+                    <img src="./img/Heineken.jpg" alt="">
+                    <div class="overlay">
+                        <button class="custom-button">View Details</button>
+                    </div>
+                </div>
             </div>
             <div class="col-span-2 m-col-span-4 l-col-span-4 mobile-img">
-                <img src="./img/vegan.jpg" alt="">
+                <div class="service-item">
+                    <img src="./img/vegan.jpg" alt="">
+                    <div class="overlay">
+                        <button class="custom-button">View Details</button>
+                    </div>
+                </div>
             </div>
             <div class="col-span-2 m-col-span-6 l-col-span-6 ">
-                <img src="./img/monster.jpg" alt="">
+                <div class="service-item">
+                    <img src="./img/monster.jpg" alt="">
+                    <div class="overlay">
+                        <button class="custom-button">View Details</button>
+                    </div>
+                </div>
             </div>
             <div class="col-span-2 m-col-span-6 l-col-span-6 ">
-                <img src="./img/pepsi.jpg" alt="">
+                <div class="service-item">
+                    <img src="./img/pepsi.jpg" alt="">
+                    <div class="overlay">
+                        <button class="custom-button">View Details</button>
+                    </div>
+                </div>
             </div>
+            <div class="col-span-4 m-col-start-5 m-col-end-10 l-col-start-6 l-col-end-8 box"><button class="custom-button">Explore more</button></div>
         </section>
         <section class="grid-con">
             <h2 class="hidden">Video </h2>
@@ -83,9 +109,9 @@
             </div>
         </section>
         <section class="grid-con services">
-            <h2 class="hidden">Product info</h2>
+            <p class="hidden">Product info</p>
             <div class="col-span-4 m-col-span-5 l-col-span-5 ">
-                <img src="./img/img 6.jpg" alt="">
+                <img src="./img/service-img-1.jpg" alt="">
             </div>
             <div class="col-span-4 m-col-span-7 l-col-span-7 box">
                 <p>"Quench your thirst and indulge in a delightful experience with our range of carbonated drinks. At
@@ -110,18 +136,18 @@
 
             </div>
             <div class="col-span-4 m-col-span-5 l-col-span-5 ">
-                <img src="./img/img5.jpg" alt="">
+                <img src="./img/service-img-2.jpg" alt="">
             </div>
         </section>
         <footer class="grid-con">
             <h2 class="hidden">Footer</h2>
-                 <div class="col-span-3 m-col-span-12 l-col-span-12 ">
-                <h2> ORBITZ </h2>
+                 <div class="col-span-4 m-col-span-12 l-col-span-12 ">
+                <p class="bold"> ORBITZ </p>
               
                 <p>©2023 by Orbitz. Proudly created with Orbitz.com</p>
-                <p><img src="./img/facebook (2).png" alt="">
-               <img src="./img/instagram (3).png" alt="">
-              <img src="./img/twitter (4).png" alt=""></p>
+                <p><img src="./img/facebook.png" alt="">
+               <img src="./img/instagram.png" alt="">
+              <img src="./img/twitter.png" alt=""></p>
             </div>
         </footer>
     </section>
