--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <section class="grid-con">
             <h2 class="hidden">Product Section</h2>
             <div class="col-span-4 m-col-start-4 m-col-end-10 l-col-start-4 l-col-end-10 box">
-                <p class="bold">Our Products </p>
+                <p class="bold">Our Products</p>
             </div>
         </section>
        <section class="grid-con services">
-    <h2 class="hidden">Service Desc</h2>
+    <h2 class="hidden">products info</h2>
     <div class="col-span-2 m-col-span-4 l-col-span-4">
         <div class="service-item">
             <img src="./img/product-img-01.jpg" alt="">
@@ -103,13 +103,13 @@
             </div>
         </section>
         <section class="grid-con">
-            <h2 class="hidden">Product </h2>
+            <h2 class="hidden">Services </h2>
             <div class="col-span-4 m-col-span-12 l-col-span-12 box">
                 <p class="bold">Our Services</p>
             </div>
         </section>
         <section class="grid-con services">
-            <p class="hidden">Product info</p>
+            <h2 class="hidden">Service info</h2>
             <div class="col-span-4 m-col-span-5 l-col-span-5 ">
                 <img src="./img/service-img-1.jpg" alt="">
             </div>
