--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@300&family=Ubuntu:wght@300&display=swap">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@600&display=swap" rel="stylesheet">
     <title>MIDTERM</title>
 </head>
 
@@ -18,7 +21,7 @@
     <section class="spacer">
         <header class="grid-con">
             <div class="col-span-3 m-col-span-2 l-col-span-12 ">
-                <h2> ORBITZ </h2>
+                <h2 class="logo"> ORBITZ </h2>
                 <nav class="navbar">
                     <ul>
                         <li><a href="#">Our Company</a></li>
