--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <section class="spacer">
         <header class="grid-con">
             <div class="l-col-span-12 ">
-                <h2> ORBITZ </h2>
+                <h2 class="logo"> ORBITZ </h2>
                 <nav class="navbar">
                     <ul>
                         <li><a href="#">Our Company</a></li>
                         <li><a href="#">Brand</a></li>
                         <li><a href="#">Resposible Business</a></li>
                         <li><a href="#">News</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="./contact.html">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -118,7 +118,8 @@
                     Orbitz, we bring the fizzy goodness of Coke right to your doorstep. Enjoy the convenience
                     of home delivery, where every sip is a refreshing escape from the ordinary. But that's not all! Pair
                     your favorite Coke with our tantalizing selection of special dishes. From mouthwatering snacks to
-                    delectable treats, we've curated a menu that perfectly complements the fizzy delight. Elevate your
+                    delectable treats, we've curated a menu that perfectly complements the fizzy delight. </p>
+                    <p class="mob-tab-text">Elevate your
                     taste buds with our carefully crafted combinations, guaranteed to satisfy your cravings. Experience
                     the perfect harmony of flavors with our carbonated drink home delivery, making every moment
                     special."</p>
