--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="grid-con hero">
             <h2 class="hidden">Hero Image</h2>
             <div class="col-span-4 m-col-span-12 l-col-span-12 ">
-                <img src="./img/hero-img.jpeg" alt="Hero image">
+                <img src="./img/hero-img.jpg" alt="Hero image">
             </div>
         </section>
         <section class="grid-con">
